fix text overflow in guides

--- a/guides/assets/stylesheets/main.css
+++ b/guides/assets/stylesheets/main.css
@@ -254,7 +254,8 @@ body {
   right: 0;
   background: #FFF;
   padding: 1em 1.5em 1em 1.25em;
-  width: 20em;
+  width: 17em;
+  overflow: scroll;
   font-size: 0.9285em;
   line-height: 1.3846em;
   margin-right: 1em;
@@ -281,7 +282,7 @@ body {
 }
 
 #header .wrapper, #topNav .wrapper, #feature .wrapper {padding-left: 1em; max-width: 960px;}
-#feature .wrapper {max-width: 720px; padding-right: 23em; position: relative; z-index: 0;}
+#feature .wrapper {max-width: 640px; overflow: scroll; padding-right: 23em; position: relative; z-index: 0;}
 
 @media screen and (max-width: 960px) {
   #container .wrapper { padding-right: 23em; }
